refactor(piidetector): enhance detection strategies
- Update abstract strategy base class
- Improve composite strategy pattern implementation
- Optimize heuristic name matching algorithm
- Enhance NER model strategy with context awareness
- Refine regex pattern matching strategy